# bifrost-usd

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
bifrost_hydra/src/BifrostHdEngine/: CMakeLists.txt  Container.cpp  Container.h  Engine.cpp  Engine.h  Export.h  JobTranslationData.cpp  JobTranslationData.h  Parameters.cpp  Parameters.h  README.md  Requirement.cpp  Requirement.h  Runtime.cpp  Runtime.h  ValueTranslationData.cpp  ValueTranslationData.h  Workspace.cpp  Workspace.h
bifrost_hydra/src/BifrostHdGraph/: BifrostGraphGenerativeProcedural.cpp  BifrostGraphGenerativeProcedural.h  BifrostGraphGenerativeProceduralPlugin.cpp  BifrostGraphGenerativeProceduralPlugin.h  CMakeLists.txt  Export.h  plugInfo.json.in
bifrost_hydra/test/: CMakeLists.txt  testHdSceneIndexBifrostGraphPrim.cpp  testHdSceneIndexQueries.cpp  test_bif_geo_compounds_config.json
bifrost_hydra/test/resources/: create_clumpy_hairs.usda  create_colored_mesh_cube.usda  create_grass_test1.usda  create_hairs.usda  create_mesh_array.usda  create_mesh_cube.usda  create_mesh_plane_with_animated_pt.usda  create_mesh_sphere_proc_001.usda  create_simple_instances_test.usda  create_snow_shadow_proc_001.usda  create_strands_from_input_mesh.usda  create_strands_test1.usda  usd_geometries.usda
bifrost_hydra/test/testUtils/: CMakeLists.txt  Export.h  RecordingSceneIndexObserver.cpp  RecordingSceneIndexObserver.h  TestSceneIndexPrim.cpp  TestSceneIndexPrim.h
doc/doxygen/: CMakeLists.txt  Doxyfile.in
maya_plugin/: CMakeLists.txt
maya_plugin/cmake/: maya.cmake
maya_plugin/src/: CMakeLists.txt
maya_plugin/src/config/: CMakeLists.txt  plugin_config.json  usd_maya_translation.json.in
maya_plugin/src/usdmodule/: CMakeLists.txt  export.h  usd_translator.cpp  usd_translator.h
maya_plugin/test/: CMakeLists.txt  testUsdTranslation.cpp
src/BifrostUsd/: Attribute.cpp  CMakeLists.txt  Layer.cpp  Prim.cpp  Stage.cpp  StageCache.cpp
src/BifrostUsd/include/: Attribute.h  BifrostUsdExport.h  CMakeLists.txt  Enum.h  Layer.h  Prim.h  Stage.h  StageCache.h
src/config/: CMakeLists.txt  usd_pack_config.json.in
src/nodedefs/: CMakeLists.txt  header_parser_macros.h  logger.cpp  logger.h  nodedef_export.h  return_guard.h  usd_attribute_nodedefs.cpp  usd_attribute_nodedefs.h  usd_collection_nodedefs.cpp  usd_collection_nodedefs.h  usd_geom_nodedefs.cpp  usd_geom_nodedefs.h  usd_layer_nodedefs.cpp  usd_layer_nodedefs.h  usd_material_binding_nodedefs.cpp  usd_material_binding_nodedefs.h  usd_prim_nodedefs.cpp  usd_prim_nodedefs.h  usd_stage_nodedefs.cpp  usd_stage_nodedefs.h  usd_type_converter.h  usd_utils.cpp  usd_utils.h  usd_variantset_nodedefs.cpp  usd_variantset_nodedefs.h
src/nodedefs/compounds/: CMakeLists.txt  add_to_stage.json  assign_usd_material.json  build_prim_from_definition.json  create_child_prim_path.json  create_usd_attribute_from_def.json  create_usd_layer.json  create_usd_prim.json  create_usd_stage.json  define_usd_attribute.json  define_usd_curves.json  define_usd_display_color.json  define_usd_material_tag.json  define_usd_mesh.json  define_usd_point_instancer.json  define_usd_preview_surface.json  define_usd_prim.json  define_usd_reference.json  define_usd_reference_from_file.json  define_usd_relationship.json  define_usd_transform.json  define_usd_variant_set.json  duplicate_usd_prim_definition.json  get_attribute_comment.json  get_attribute_custom_data.json  get_attribute_documentation.json  get_prim_comment.json  get_prim_custom_data.json  get_prim_documentation.json  get_stage_comment.json  get_stage_custom_layer_data.json  get_stage_documentation.json  get_usd_attribute_value.json  open_usd_layer.json  open_usd_stage.json  read_usd_curves.json  read_usd_meshes.json  relationship.json  save_usd_stage.json  set_attribute_comment.json  (+15 more)
src/resources/: CMakeLists.txt
src/resources/docs/: CMakeLists.txt  add_to_stage.md  create_usd_layer.md  create_usd_prim.md  create_usd_stage.md  define_usd_attribute.md  define_usd_curves.md  define_usd_display_color.md  define_usd_mesh.md  define_usd_point_instancer.md  define_usd_preview_surface.md  define_usd_prim.md  define_usd_reference.md  define_usd_reference_from_file.md  define_usd_relationship.md  define_usd_transform.md  define_usd_variant_set.md  get_usd_attribute_value.md  open_usd_layer.md  open_usd_stage.md  save_usd_stage.md
test/: CMakeLists.txt  README.md  usd_pack_test_config.json
test/BifrostUsd/: CMakeLists.txt  testBifrostUsdLayer.cpp  testBifrostUsdStage.cpp
test/compounds/IO/: read_usd_curves_test00.json  read_usd_curves_with_color_test00.json  read_usd_meshes_test00.json  read_usd_meshes_with_color_test00.json
test/compounds/attribute/: scalar_attribute_test_00.json
test/compounds/integration/: landscape_generator_1_0_0.json  landscape_generator_test00.json  load_all_compounds_test00.json
test/compounds/layer/: create_empty_layer_test00.json  export_layer_to_file_test00.json
test/compounds/prim/: create_prim_hierarchy_1_0_0.json  create_prim_hierarchy_test00.json
test/compounds/stage/: add_to_stage_test00.json  (+2 more)
test/nodedefs/: CMakeLists.txt  testAttributeNodeDefs.cpp  testCollectionNodeDefs.cpp  testDictSerialization.cpp  testGeomNodeDefs.cpp  testLayerNodeDefs.cpp  testMaterialBindingNodeDefs.cpp  testPrimNodeDefs.cpp  testStageNodeDefs.cpp  testVariantSetNodeDefs.cpp  test_graphs.py
test/resources/: Grass1.usd  Grass2.usd  Mushroom1.usd  Mushroom2.usd  Tree1.usd  Tree2.usd  curves_from_quad.usda  helloworld.usd  layer_with_sub_layers.usda  polygonal_mesh_cube.usd  referenced_tree1.usda  textured_grid.usda
test/taskDescriptions/: tasks_add_to_stage.json  tasks_create_empty_layer.json  tasks_create_prim_hierarchy.json  tasks_create_variants.json  tasks_export_layer_to_file.json  tasks_fan_out_stages.json  tasks_landscape_generator.json  tasks_load_all_compounds.json  tasks_read_usd_curves.json  tasks_read_usd_curves_with_color.json  tasks_read_usd_meshes.json  tasks_read_usd_meshes_with_color.json  tasks_save_stage.json  tasks_scalar_attribute_test.json
(+103 files in other folders)
